syntax = "proto3";

option go_package = "./pb";

package pb;

message RegisterRoleReq {
    string accountId = 1;
    string serverId = 2;
  	string templateValue = 3;
}

message RegisterRoleResp {
    string roleId = 1;
    int64 returnCode = 2;
}


message SetRoleReq {
    string roleId = 1;
  	string templateValue = 2;
}

message SetRoleResp {
    int64 returnCode = 1;
}


message GetRoleReq {
    string roleId = 1;
}

message GetRoleResp {
    int64 returnCode = 1;
  	string roleId = 2;
    string bornServerId = 3;
    string curServerId = 4;
    repeated string historyServerIds = 5;
    int64 createTime	 = 6;
    repeated string tags = 7;
    string templateValue = 8;
}

message DeleteRoleReq {
    string roleId = 1;
}
message DeleteRoleResp {
    int64 returnCode = 1;
}

service rolemanager {
    rpc registerRole(stream RegisterRoleReq) returns (stream RegisterRoleResp);
    rpc setRole(stream SetRoleReq) returns (stream SetRoleResp);
    rpc getRole(stream GetRoleReq) returns (stream GetRoleResp);
    rpc deleteRole(stream DeleteRoleReq) returns (stream DeleteRoleResp);
}